# logi-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
source/: main.cpp
source/gates/: andGate.cpp  andGate.hpp  gate.cpp  gate.hpp  gateInput.cpp  gateInput.hpp  notGate.cpp  notGate.hpp  orGate.cpp  orGate.hpp  xorGate.cpp  xorGate.hpp
source/gates/interfacs/: iIdentifyable.hpp
source/tools/: numberInput.cpp  numberInput.hpp
source/ui/: logiSimUi.cpp  logiSimUi.hpp
source/ui/states/: mainState.cpp  mainState.hpp  state.cpp  state.hpp
